# SimplePredictions

./: .gitignore  CLAUDE.md  GENE_DISEASE_VARIANT_EXPERIMENTS.md  README.md  app.py  generate_all.sh  pyproject.toml  regenerate_all.sh  run_app.sh  run_ccfd_analysis.sh  run_cfd_analysis.sh  run_gene_disease_variant_analysis.sh  run_leakage_analysis.sh  run_subclass_comparison.sh  run_treats_analysis.sh
examples/: README_external_models.md  external_model_predictions.tsv  external_model_training_pairs.tsv
ground_truth/: Indications List.csv
scripts/: analyze_shap_with_sae.py  calculate_node_degrees.py  convert_emb_to_npz.py  example_sae_features.json  find_degree2_pairs.py  run_ccdd_analysis.sh  train_ccdd_model.sh
src/: __init__.py
src/analysis/: __init__.py  compare_treats_edges.py  extract_gene_disease_gold_standard.py  fix_indications_csv.py
src/embedding/: __init__.py  generate_embeddings.py
src/graph_modification/: __init__.py  create_robokop_input.py  name_resolver.py  type_utils.py
src/modeling/: __init__.py  evaluate_model.py  evaluate_predictions.py  integrate_external_predictions.py  shap_analysis.py  train_model.py  train_rf_model.py
templates/: index.html
tests/: conftest.py  test_create_robokop_input.py  test_evaluate_model.py  test_extract_gene_disease_gold_standard.py  test_generate_embeddings.py  test_name_resolver.py  test_shap_analysis.py  test_train_model.py  test_type_utils.py
